maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:62: error: ':' expected but ')' found.
def isDirectionFree(dir) {
                       ^Escaper:69: error: identifier expected but '}' found.
}
^